--- a/templates/satelite/main.cf.erb
+++ b/templates/satelite/main.cf.erb
@@ -38,7 +38,7 @@ alias_maps                 = hash:/etc/aliases
 alias_database             = hash:/etc/aliases
 myorigin                   = /etc/mailname
 mydestination              = <%= @fqdn %>, localhost.<%= @domain %>, localhost
-<% if @relayhost != :undefined -%>
+<% if !@relayhost.empty? -%>
 relayhost                  = [<%= @relayhost %>]:587
 smtp_sasl_auth_enable      = yes
 smtp_sasl_security_options = noanonymous
